--- a/css/about.css
+++ b/css/about.css
@@ -8,7 +8,7 @@
   max-width: 900px;
   margin: 0 auto;
   padding: 30px;
-  background-color: black;
+  background-color: rgb(27, 27, 27);
   border-radius: 10px;
   box-shadow: 0px 5px 15px white;
   margin-top: -25px;
