--- a/css/project.css
+++ b/css/project.css
@@ -12,7 +12,7 @@
   margin-top: 20px;
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
 }
 
 .card-bg {
