--- a/css/about.css
+++ b/css/about.css
@@ -38,7 +38,8 @@
   animation-play-state: paused;
 }
 .about_head {
-  color: black;
+  color: rgba(16, 16, 16, 0.84);
+  font-weight: 500;
   font-size: 2.5rem;
   margin-bottom: 1px;
   margin-left: 150px;
@@ -64,7 +65,8 @@
   }
 
   .about_head {
-    color: black;
+    color: rgba(16, 16, 16, 0.84);
+    font-weight: 500;
     font-size: 2.5rem;
     margin-bottom: -20px;
     margin-left: 30px;
