--- a/css/headline.css
+++ b/css/headline.css
@@ -1,14 +1,16 @@
 .headline {
-  color: black;
+  color: rgba(16, 16, 16, 0.84);
   font-size: 2.5rem;
   margin-bottom: 25px;
   margin-left: 150px;
   margin-top: 40px;
+  font-weight: 500;
 }
 
 @media only screen and (max-width: 568px) {
   .headline {
-    color: black;
+    color: rgba(16, 16, 16, 0.84);
+    font-weight: 500;
     font-size: 2.5rem;
     margin-bottom: 1px;
     margin-left: 30px;
