--- a/css/project.css
+++ b/css/project.css
@@ -63,7 +63,8 @@
 }
 
 .card--head {
-  color: black;
+  color: rgba(16, 16, 16, 0.84);
+  font-weight: 500;
   font-size: 2.5rem;
   margin-bottom: -110px;
   margin-left: 140px;
@@ -84,6 +85,8 @@
   }
 
   .card--head {
+    color: rgba(16, 16, 16, 0.84);
+    font-weight: 500;
     margin-bottom: -290px;
     margin-left: 40px;
     margin-top: 480px;
