--- a/css/project.css
+++ b/css/project.css
@@ -59,7 +59,10 @@
 .card-description {
   color: white;
   margin: 0;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
+}
+.card-title {
+  font-size: 1rem;
 }
 
 .card--head {
