--- a/css/about.css
+++ b/css/about.css
@@ -13,11 +13,28 @@
   box-shadow: 0px 5px 15px white;
   margin-top: -25px;
 }
-
 .portfolio-content {
   text-align: left;
   line-height: 1.6;
   /* animation: fadeIn 3s ease-in-out infinite; */
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 1s ease, transform 1s ease;
+}
+
+.portfolio-content-visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+.about-section {
+  opacity: 0;
+  transform: translateY(50px); /* Start slightly below */
+  transition: opacity 0.8s ease, transform 1s ease;
+}
+
+.about-section-visible {
+  opacity: 1;
+  transform: translateY(0); /* Move to original position */
 }
 @keyframes fadeIn {
   0% {
@@ -39,11 +56,20 @@
 }
 .about_head {
   color: rgba(16, 16, 16, 0.84);
-  font-weight: 500;
   font-size: 2.5rem;
-  margin-bottom: 1px;
-  margin-left: 150px;
-  margin-top: 60px;
+  margin-bottom: 5px;
+  margin-left: 170px;
+  margin-top: 40px;
+  font-weight: 500;
+  color: #333;
+  letter-spacing: 1px;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 1s ease, transform 1s ease;
+}
+.about-head-visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .portfolio-content p {
