--- a/css/project.css
+++ b/css/project.css
@@ -14,6 +14,7 @@
   position: relative;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Add box-shadow for card */
   transition: box-shadow 0.3s ease, transform 0.3s ease; /* Smooth transition for box-shadow and transform */
+  cursor: pointer;
 }
 
 .card:hover {
