--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,21 @@ body {
   background-color: #eeeeee;
   font-family: "Poppins", sans-serif;
 }
+
+.loader-container {
+  transition: filter 0.3s ease-in-out; /* Smooth transition */
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999; /* Ensure it appears above other content */
+}
+
+@media only screen and (max-width: 568px) {
+  .loader-container {
+    top: 1%;
+  }
+}
