--- a/css/experience.css
+++ b/css/experience.css
@@ -1,5 +1,3 @@
-/* experience.css */
-
 .exp--container {
   display: flex;
   justify-content: start;
@@ -11,7 +9,7 @@
 
 .company-section {
   display: flex;
-  flex-direction: column; /* Ensure each company is stacked vertically */
+  flex-direction: column;
   width: 60%;
   margin-top: 170px;
 }
@@ -94,7 +92,7 @@
   }
 
   .company-section {
-    width: 90%;
+    width: 92%;
     margin-top: 170px;
   }
 
@@ -104,8 +102,12 @@
   }
 
   .verticle--line {
-    width: 10px;
+    width: 12px;
     height: 310px;
     margin-top: 95px;
+  }
+  .company-section .tab-paragraph {
+    font-size: clamp(14px, 2vw, 18px);
+    text-align: start;
   }
 }
