--- a/css/experience.css
+++ b/css/experience.css
@@ -108,6 +108,6 @@
   }
   .company-section .tab-paragraph {
     font-size: clamp(14px, 2vw, 18px);
-    text-align: start;
+    text-align: unset;
   }
 }
