--- a/css/project.css
+++ b/css/project.css
@@ -74,6 +74,12 @@
   margin-left: 153px;
   margin-top: 210px;
 }
+@media only screen and (max-width: 400px) {
+  .card--head {
+    margin-top: 350px !important;
+  }
+}
+
 @media only screen and (max-width: 568px) {
   .card-container {
     display: block;
@@ -93,7 +99,7 @@
     font-weight: 500;
     margin-bottom: -290px;
     margin-left: 40px;
-    margin-top: 400px;
+    margin-top: 390px;
   }
   .card-img {
     width: 100%;
