--- a/css/index.css
+++ b/css/index.css
@@ -3,20 +3,20 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.loader-container {
-  transition: filter 0.3s ease-in-out; /* Smooth transition */
-  position: fixed;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 9999; /* Ensure it appears above other content */
+.spinner-border {
+  border: 8px solid #c8f560;
+  border-top: 8px solid #eeeeee;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
 }
 
-@media only screen and (max-width: 568px) {
-  .loader-container {
-    top: 1%;
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
