--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ body {
 
 .spinner-border {
   border: 8px solid #c8f560;
-  border-top: 8px solid #eeeeee;
+  border-top: 8px solid #353535;
   border-radius: 50%;
   width: 60px;
   height: 60px;
